# nxs

./: .gitignore  AGENTIC_LOOP_WITH_SESSIONS_PLAN.md  ARCHITECTURE.md  ARCHITECTURE_ANALYSIS.md  BUGFIXES.md  CHAT_WRAPPING_FIX.md  CLAUDE.md  CLEAN_CHAT_SOLUTION.md  IMPROVEMENT_PLAN.md  INPUT_FIX.md  INTEGRATION_GUIDE.md  MULTI_SESSION_IMPLEMENTATION.md  PHASE_2_3_COGNITIVE_ARCHITECTURE.md  README.md  README_dev.md  REASONING_SYSTEM_PLAN.md  REDUNDANCY_REPORT.md  REFACTORING_6.1_COMPLETED.md  REFACTORING_7.1_COMPLETED.md  REFACTORING_PHASE2_PLAN.md  REFACTORING_PHASE3_COMPLETED.md  REFACTORING_PHASE3_PLAN.md  REFACTORING_PHASE3_STRUCTURE.md  REFACTORING_PHASE4_PLAN.md  REFACTORING_PLAN.md  RESEARCH_PROGRESS_TRACKING_PLAN.md  SESSION_MANAGER_INTEGRATION.md  SESSION_STATE_ARCHITECTURE.md  STREAMING_FIX.md  WEEK1_IMPLEMENTATION_SUMMARY.md  check_theme.py  debug_input_styles.py  input_styles_debug.txt  main.py  mcp_server.py  pyproject.toml  requirements.txt  ruff.toml  test_callback_signatures.py  test_input.py  (+5 more)
.claude/: settings.local.json
core/: chat.py  command_control.py
docs/: CALLBACK_SIGNATURE_AUDIT.md  LOCAL_TOOLS.md  REASONING_INTEGRATION_FIX.md  REASONING_SYSTEM.md
examples/: local_tools_integration.py
src/nxs/: __init__.py  __main__.py  logger.py  main.py  mcp_client.py  mcp_server.py  utils.py
src/nxs/application/: agentic_loop.py  approval.py  artifact_manager.py  artifact_service.py  chat.py  claude.py  command_control.py  connection_manager.py  conversation.py  cost_calculator.py  cost_tracker.py  local_tool_provider.py  mcp_config.py  mcp_tool_provider.py  progress_tracker.py  reasoning_loop.py  session.py  session_manager.py  session_manager_new.py  session_state.py  state_extractor.py  state_update_service.py  tool_registry.py  tool_state.py  tools.py
src/nxs/application/artifacts/: __init__.py  cache.py  repository.py
src/nxs/application/parsers/: __init__.py  base.py  composite.py  defaults.py  key_value.py  positional.py  schema_adapter.py  utils.py
src/nxs/application/reasoning/: __init__.py  (+9 more)
src/nxs/config/: nxs_mcp_config.json
src/nxs/core/: artifact_manager.py  chat.py  command_control.py  mcp_config.py  protocols.py  tools.py
src/nxs/domain/: __init__.py  artifacts.py
src/nxs/infrastructure/: __init__.py
src/nxs/mcp_client/: __init__.py  __main__.py  auth.py  callback.py  cli.py  client.py  factory.py  storage.py
src/nxs/presentation/: __init__.py
src/nxs/prompts/: analyze_document.txt  format_document.txt  summarize_document.txt
src/nxs/tools/: __init__.py  date_and_time.py  location.py  weather.py
src/nxs/tui/: __init__.py  app.py  styles.tcss
tests/: __init__.py  test_agentic_loop_tracker_integration.py  test_connection_manager.py  test_conversation.py  test_main.py  test_parsers.py  test_progress_tracker.py  test_reasoning_loop_tracker_integration.py  test_session.py  test_session_manager.py  test_session_state.py  test_state_providers.py
tests/integration/: __init__.py  test_adaptive_reasoning_integration.py
tests/mcp_client/: test_factory.py
tests/performance/: __init__.py  test_reasoning_benchmarks.py
tests/reasoning/: __init__.py  conftest.py  test_analyzer.py  test_evaluator.py  test_planner.py  test_reasoning_loop.py  test_synthesizer.py
tests/tui/completion/: test_applier.py  test_argument_completion.py  test_command_completion.py  test_orchestrator.py  test_resource_completion.py
tests/tui/formatters/: test_status.py
tests/tui/widgets/: test_mcp_panel.py  test_server_widget.py
tui/: app.py  styles.tcss
tui/widgets/: __init__.py  input_field.py  status_panel.py
(+154 files in other folders)
